using Head_First_Design_Patterns.Strategy_Pattern.ActionAdventureGame.Behaviour;

namespace Head_First_Design_Patterns.Strategy_Pattern.ActionAdventureGame.Client;

public class Knight : Character
{

}